@@ -249,6 +249,7 @@ OP_DeleteCharge=0x2d5b
 OP_ItemPacket=0x5e0e		# 0x5e0e 
 OP_ItemLinkResponse=0x5f7f	# 0x2fdb 
 OP_ItemLinkClick=0x0353
+OP_ItemPreview=0x05cf
 OP_NewSpawn=0x0000 
 OP_Track=0x7d43
 OP_TrackTarget=0x4c42 
